tests/machine/x/c/go_auto.error
line: 0
error: output mismatch
-- got --
5
-1416462912
42
-- want --
5
3.14
42
   1: #include <stdio.h>
