tests/machine/x/c/go_auto.c
#include <stdio.h>
#include <stdlib.h>

int main() {
  printf("%d\n", (2 + 3));
  printf("%d\n", 3.14);
  printf("%d\n", 42);
  return 0;
}
